--- a/nixie/orders/templates/orders/order/created.html
+++ b/nixie/orders/templates/orders/order/created.html
@@ -46,6 +46,7 @@
         text-decoration: none;
         text-align: center;
         margin: 50px;
+        border-radius: 10px;
     }
 
     .button:active,
@@ -56,6 +57,7 @@
         border-color: #DC7A33;
         border-style: solid;
         cursor: pointer;
+        border-radius: 10px;
     }
 </style>
 {% extends 'nixie_app/index.html' %}
