--- a/nixie/nixie_app/templates/nixie_app/create.html
+++ b/nixie/nixie_app/templates/nixie_app/create.html
@@ -32,6 +32,7 @@
         border: 2px solid #DC7A33;
         position: relative;
         flex-flow: row;
+        border-radius: 10px;
     }
 
     .left_image {
@@ -52,6 +53,7 @@
         color: #181818;
         background: #DC7A33;
         border-width: 0;
+        border-radius: 10px;
     }
 
     .button:active,
@@ -72,6 +74,32 @@
         flex-direction: column;
         justify-content: right;
         align-items: end;
+    }
+
+    @media (max-width: 599px) {
+        .left_image {
+            display: none;
+        }
+
+        .main {
+            width: 90%;
+            margin: 50px;
+
+        }
+
+        .button {
+            width: 200px;
+            margin-top: 20px;
+        }
+
+        .form_group_cart {
+            margin: 25px auto 25px auto;
+            width: 100%
+        }
+        .form_group_cart div{
+            margin: 0 auto 0 auto;
+        }
+
     }
 </style>
 
