--- a/nixie/nixie_app/templates/nixie_app/detail.html
+++ b/nixie/nixie_app/templates/nixie_app/detail.html
@@ -15,10 +15,11 @@
     .detail_section {
         background: #181818;
         width: 100%;
-        height: 140%;
+        height: auto;
         justify-content: center;
         flex-direction: column;
         display: block;
+        padding-bottom: 50px;
     }
 
     .main {
@@ -68,29 +69,40 @@
         margin-bottom: 5%;
     }
 
+    .pictures {
+        height: auto;
+        width: 60%;
+        display: flex;
+        flex-direction: row;
+        position: relative;
+    }
+
     .left {
         height: 400px;
-        width: 600px;
         position: relative;
         overflow: hidden;
         margin-right: 10px;
+        width: 60%;
+        float: left
     }
 
     .center {
         height: 400px;
-        width: 100px;
         position: relative;
         overflow: hidden;
         flex-direction: column;
         margin-right: 40px;
+        width: 40%;
+        float: left
     }
 
     .right {
         height: 400px;
-        width: 100px;
         position: relative;
         overflow: hidden;
         flex-direction: column;
+        width: 20%;
+        float: right
     }
 
     .card_image_center_top {
@@ -206,6 +218,90 @@
         color: #fff;
     }
 
+    @media (max-width: 1199px) {
+        .main {
+            width: 90%;
+        }
+
+        .left,
+        .center,
+        .right {
+            height: 300px;
+        }
+
+        .name {
+            font-size: 18px;
+        }
+
+        .price {
+            font-size: 32px;
+        }
+
+        .card_add,
+        .card_buy {
+            font-size: 18px;
+        }
+
+        @media (max-width: 899px) {
+            .page_title {
+                line-height: 42px;
+                margin-top: 29px;
+                width: 90%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .main {
+                width: 90%;
+                display: flex;
+                flex-direction: column; /* Размещаем элементы в колонку */
+                transition: 0.2s;
+                position: relative;
+                justify-content: center;
+                margin: auto;
+            }
+
+            .right, .pictures {
+                width: 100%;
+            }
+
+            .pictures {
+                overflow-x: scroll;
+                border-radius: 10px;
+                display: grid;
+                grid-template-columns: repeat(2, 300px);
+                column-gap: 25px;
+            }
+
+            .left, .center {
+                flex-direction: row;
+                height: 200px;
+                overflow: visible;
+                margin-right: 0;
+            }
+
+
+            .card_image_left,
+            .card_image_center_bottom,
+            .card_image_center_top {
+                height: 100%;
+                width: 300px;
+            }
+
+            .card_image_center_bottom {
+                top: 0;
+                left: 325px;
+            }
+
+            .description_div {
+                width: 90%;
+            }
+
+            .right {
+                height: 300px;
+            }
+        }
+    }
 
 </style>
 {% extends 'nixie_app/index.html' %}
@@ -216,38 +312,37 @@
     </section>
     <section class="detail_section">
         <div class="main">
-            <div class="left" style="width: 45%; float:left">
-                <a class="card_image_left">
-                    <img src="
+            <div class="pictures">
+                <div class="left">
+                    <a class="card_image_left">
+                        <img src="
+
+
+                                {% if product.image1 %}{{ product.image1.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
+                    </a>
+                </div>
+                <div class="center">
+                    <a class="card_image_center_top">
+                        <img src="
+
+
+                                {% if product.image2 %}{{ product.image2.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
+                    </a>
+                    <a class="card_image_center_bottom">
+                        <img src="
 
 
 
-                            {% if product.image1 %}{{ product.image1.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
-                </a>
+
+
+
+
+
+                                {% if product.image3 %}{{ product.image3.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
+                    </a>
+                </div>
             </div>
-            <div class="center" style="width: 25%; float:left">
-                <a class="card_image_center_top">
-                    <img src="
-
-
-
-
-
-
-                            {% if product.image2 %}{{ product.image2.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
-                </a>
-                <a class="card_image_center_bottom">
-                    <img src="
-
-
-
-
-
-
-                            {% if product.image3 %}{{ product.image3.url }}{% else %}{{ '/images/sample.png' }}{% endif %}">
-                </a>
-            </div>
-            <div class="right" style="width: 20%; float:right">
+            <div class="right">
                 <div class="card_right_top">
                     <p class="name">{{ product.name }}</p>
                     <p class="price">{{ product.price }} руб.</p>
@@ -255,10 +350,10 @@
                 <div class="card_right_bottom">
                     <a href="{% url "orders:order_create_one" product.id %}" class="card_buy">Купить</a>
                     <form action="{% url "cart:cart_add" product.id %}" method="post">
-                            {{ cart_product_form }}
-                            {% csrf_token %}
-                            <button type="submit" class="card_add">Добавить в корзину</button>
-                        </form>
+                        {{ cart_product_form }}
+                        {% csrf_token %}
+                        <button type="submit" class="card_add">Добавить в корзину</button>
+                    </form>
                 </div>
             </div>
         </div>
