--- a/nixie/nixie_app/templates/nixie_app/main.html
+++ b/nixie/nixie_app/templates/nixie_app/main.html
@@ -2,8 +2,7 @@
     .clock {
         width: 100%;
         height: calc(100% - 73px);
-        background: #3A3A3A;
-        display: flex;
+    {#background: #3A3A3A;#} display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -311,7 +310,7 @@
 
     .main_catalog_items {
         height: auto;
-        background: #3A3A3A;
+    {#background: #3A3A3A;#}
     }
 
     .main_catalog_div {
@@ -435,8 +434,7 @@
 
     .stages {
         height: auto;
-        background: #3A3A3A;
-        width: 100%;
+    {#background: #3A3A3A;#} width: 100%;
     }
 
     .stages_div {
@@ -639,11 +637,199 @@
     }
 
     @media (max-width: 1199px) {
+        .card {
+            width: 220px;
+            min-height: 350px;
+            display: flex;
+            flex-direction: column; /* Размещаем элементы в колонку */
+            transition: 0.2s;
+            position: relative;
+            background: #181818;
+            border: 1px solid black;
+            margin: 0 auto 10px auto;
+        }
+
+        .card_top {
+            flex: 0 0 150px; /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
+            position: relative;
+            overflow: hidden; /* Скрываем, что выходит за пределы */
+            margin: 10px 10px 0 10px;
+        }
+
+        .card_image {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .card_image > img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Встраиваем картинку в контейнер card__image */
+            transition: 0.2s;
+        }
+
+        .card_image:hover > img {
+            transform: scale(1.1);
+        }
+
+        .card_bottom {
+            margin: 0 10px 10px 10px;
+            display: flex;
+            flex-direction: column;
+            flex: 1 0 auto; /* Занимаем всю оставшуюся высоту карточки */
+        }
+
+        .card_bottom form {
+            margin-top: 5px;
+            margin-bottom: 0;
+        }
+
+        .card_title {
+            font-family: 'GOST Common';
+            font-style: normal;
+            font-weight: 300;
+            font-size: 17px;
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            line-height: 100%;
+            color: #DC7A33;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .card_price {
+            font-family: 'GOST Common';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 30px;
+            display: block;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            line-height: 100%;
+            color: #DC7A33;
+        }
+
+        .card_title:hover {
+            color: #DC7A33;
+            text-decoration: underline;
+        }
+
+        .card_add,
+        .card_buy,
+        .catalog_button {
+            font-family: 'GOST Common';
+            font-style: normal;
+            font-weight: 300;
+            font-size: 18px;
+            display: block;
+            box-sizing: border-box;
+            width: 100%;
+            color: #181818;
+            background: #DC7A33;
+            padding: 7px;
+            text-align: center;
+            border: 1px solid black;
+            cursor: pointer; /* Меняем курсор при наведении */
+            margin: auto auto 0 auto;
+            text-decoration: none; /* Прижимаем кнопку к низу карточки */
+        }
+
+        .catalog_button {
+            font-size: 28px;
+            width: 300px;
+        }
+
+        .card_add {
+            background: #181818;
+            color: #DC7A33;
+        }
+
+        .card_add:hover {
+            background: #DC7A33;
+            color: #fff;
+        }
+
+        .card_buy:hover,
+        .catalog_button:hover {
+            color: #fff;
+        }
+
+        .main_catalog_left {
+            display: grid;
+            /* Автоматически заполняем на всю ширину grid-контейнера */
+            grid-template-columns: repeat(auto-fill, 225px); /* Ширина grid-контейнера */
+            max-width: 1000px;
+            justify-content: center;
+            justify-items: center; /* Размещаем карточку по центру */
+            column-gap: 100px; /* Отступ между колонками */
+            margin: 50px auto 0px auto;
+            height: 50%;
+            width: 100%;
+            float: top;
+        }
+
+        .main_catalog_right {
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            height: 50%;
+            width: 100%;
+            float: bottom;
+        }
+
+        .main_catalog_right_top, .main_catalog_right_bottom {
+            flex: 0 0 200px;
+            position: relative;
+        }
+
+        .main_catalog_right_top p {
+            font-family: 'GOST Common';
+            font-style: normal;
+            font-weight: 300;
+            font-size: 38px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            text-align: left;
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            color: #DC7A33;
+        }
+
+        .main_catalog_right_bottom a {
+            align-items: center;
+            text-align: center;
+            position: absolute;
+            top: 10px;
+            left: 0;
+        }
+
+        .main_catalog_items {
+            height: auto;
+        {#background: #3A3A3A;#}
+        }
+
+        .main_catalog_div {
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            justify-items: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         .clock {
             width: 100%;
             height: calc(100% - 43px);
-            background: #3A3A3A;
-            display: flex;
+        {#background: #3A3A3A;#} display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -755,6 +941,7 @@
         .description_card {
             height: auto;
         }
+
 
     }
 
@@ -1109,7 +1296,7 @@
 
         .main_catalog_items {
             height: auto;
-            background: #3A3A3A;
+        {#background: #3A3A3A;#}
         }
 
         .main_catalog_div {
@@ -1145,9 +1332,11 @@
             line-height: 40px;
             margin-bottom: 50px;
         }
+
         .functions_head {
             margin: 50px auto 25px auto;
         }
+
         .stages_one,
         .stages_two,
         .stages_three,
@@ -1210,10 +1399,12 @@
             margin-top: 50px;
             gap: 50px;
         }
-        .function{
+
+        .function {
             width: 100%;
         }
-        .functions_div{
+
+        .functions_div {
             width: 90%;
         }
     }
@@ -1569,7 +1760,7 @@
 
         .main_catalog_items {
             height: auto;
-            background: #3A3A3A;
+        {#background: #3A3A3A;#}
         }
 
         .main_catalog_div {
@@ -1765,6 +1956,7 @@
 
 
 
+
                                     {% if products.0.image1 %}{{ products.0.image1.url }}{% else %}{{ "/images/sample.png" }}{% endif %}"/>
                         </a>
                     </div>
@@ -1794,6 +1986,7 @@
                         <!-- Изображение-ссылка товара -->
                         <a href="{{ products.last.get_absolute_url }}" class="card_image">
                             <img src="
+
 
 
 
