--- a/nixie/nixie_app/templates/nixie_app/question_created.html
+++ b/nixie/nixie_app/templates/nixie_app/question_created.html
@@ -20,11 +20,11 @@
         justify-content: flex-start;
         align-items: center;
         height: 200px;
+        text-align: center;
     }
 
     .cart_section p {
-        margin-bottom: auto;
-        margin-top: auto;
+        margin: auto;
         color: #DC7A33;
         font-family: 'GOST Common';
         font-weight: 300;
